# rustchat

./: .env-old-server  .env.example  .gitignore  AGENTS.md  CALLS_IMPLEMENTATION_SUMMARY.md  CALLS_TEST_PLAN.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING-new.md  CONTRIBUTING.md  DEBUG_422_ERROR.md  DEBUG_LOGGING_ADDED.md  DESIGN.md  FIX_500_ERRORS.md  FIX_CALLS_ENABLED_CHECK.md  FIX_CHANNELS_ENDPOINT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MOBILE_RINGBACK_IMPLEMENTATION_PLAN.md  PHASE2_SFU_IMPLEMENTATION.md  README.md  SECURITY.md  SPEC.md  TURN_CONFIGURATION_UPDATE.md  VERIFICATION_SUMMARY.md  WEBSOCKET_LIVENESS_IMPLEMENTATION.md  docker-compose.fast.yml  docker-compose.integration.yml  docker-compose.yml  rebuild-fast.sh  task_plan.md
backend/: Cargo.toml
backend/.cargo/: audit.toml
backend/compat/: README.md  inventory_endpoints.csv  replay_traces.py
backend/migrations/: 20260122000001_server_config.sql  20260130000004_add_max_simultaneous_connections.sql  20260130000005_config_client_advanced.sql  20260131000001_upload_sessions.sql  20260131000002_post_acknowledgements.sql  20260131000003_extend_preferences.sql  20260131000004_add_emoji_image_url.sql  20260131000005_jobs_logs.sql  20260201000001_add_calls_plugin_settings.sql  20260208120000_soft_delete_support.sql  20260209000001_channel_bookmarks.sql  20260209000003_custom_profile_attributes.sql  20260209000004_channel_bookmarks_compat.sql  20260209210000_add_user_profile_fields.sql  20260214230000_add_push_notification_config.sql  20260215220000_add_user_notify_props.sql  20260215230000_add_notification_settings.sql  20260217000001_add_presence_manual.sql  20260219000001_update_sso_configs.sql  20260219233701_sso_nullable_org.sql  20260220090000_add_user_auth_provider.sql  20260220100000_make_password_nullable_for_oauth.sql  20260222000001_add_default_theme_preferences.sql  20260222000002_create_reactions.sql  20260222000004_create_channel_bookmarks.sql  20260222000005_create_scheduled_posts.sql  20260222000006_extend_user_preferences_display_sidebar_advanced.sql  20260222000007_user_delete_audit_fields.sql  20260223000001_email_subsystem.sql  20260223000002_email_templates_seed.sql  20260223100000_migrate_smtp_to_provider.sql  20260223100001_drop_server_config_email.sql  20260223100002_email_verification.sql  20260224000001_password_reset.sql  20260225000001_allow_passwordless_registration.sql  20260226172611_fix_password_reset_template_variable.sql  20260227000001_fix_password_reset_expiry_variable.sql  20260228130000_unread_parity_channel_members.sql  20260228140000_auto_membership_policies.sql  20260228170000_team_invites.sql  (+8 more)
backend/src/: crypto.rs  lib.rs  main.rs
backend/tests/: api_activity.rs  api_admin_health.rs  (+34 more)
push-proxy/: .env.example  CONFIGURATION.md  Cargo.toml  DIAGNOSE.sh  DOCKER_DEPLOYMENT.md  Dockerfile  TROUBLESHOOTING.md  docker-compose.snippet.yml  docker-compose.yml  test-push.sh
(+694 files in other folders)
