[package]
name = "rustchat"
version = "0.0.1"
edition = "2021"
rust-version = "1.92"
authors = ["rustchat contributors"]
description = "Self-hosted, enterprise-ready team collaboration platform"
license = "MIT"
repository = "https://github.com/rustchat/rustchat"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "compression-gzip", "set-header"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
redis = { version = "0.28", features = ["tokio-comp", "json"] }
deadpool-redis = "0.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Auth
jsonwebtoken = "9.3"
argon2 = "0.5"

# Utils
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
futures-util = "0.3"
regex = "1.10"

# S3 Storage
aws-sdk-s3 = { version = "1.68", features = ["behavior-version-latest"] }
aws-config = { version = "1.6", features = ["behavior-version-latest"] }

# File handling
mime = "0.3"
mime_guess = "2.0"
sha2 = "0.10"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# HTTP client for OAuth (rustls for musl compatibility)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "builder", "smtp-transport", "pool"] }
magic-crypt = "3.1.13"
base64 = "0.22.1"
url = "2.5.8"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "multipart"] }
tokio-test = "0.4"
once_cell = "1.18"

[[bin]]
name = "rustchat"
path = "src/main.rs"
