[package]
name = "push-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2"] }
yup-oauth2 = { version = "11", features = ["hyper-rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
tower-http = { version = "0.5", features = ["trace"] }
uuid = { version = "1.0", features = ["v4"] }

# For APNS JWT authentication
jsonwebtoken = "9"
chrono = "0.4"
